--- a/config/dev.conf.yml
+++ b/config/dev.conf.yml
@@ -31,3 +31,7 @@ mysql:
   enable_file_log_writer: true
   log_filename:  mysql.log
 #  log-zap: false
+jwt:
+  expire: 168 # hour 7*24
+  issuer: "斑斑砖"
+  secret: "lzb200244"
